Updates assets-frontend to 2.241.0; fixes a small issue with status detail on smaller screens; changes an input type and adds a pattern match;

--- a/public/amls.css
+++ b/public/amls.css
@@ -833,6 +833,11 @@ fieldset.panel-indent legend {
     margin-left: 30px;
 }
 
+@media screen and (max-width: 640px) {
+  .status-detail{
+    margin-left: 0;
+  }
+}
 
 .status-list .status-list--complete {
   background-color: #28a197;
